# RegisterPackageTNUMDemo

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
_data/: package.yml
doc/: chap0.html  chap0.txt  chap0_mj.html  chapInd.html  chapInd_mj.html
gap/: RegisterPackageTNUMDemo.gd  RegisterPackageTNUMDemo.gi
src/: RegisterPackageTNUMDemo.c
tst/: gc.tst  testall.g
